@@ -1,5 +1,6 @@
 prefix="@prefix@"
 datadir="@datadir@"
+localedir=datadir+"/locale"
 pkgdatadir="@pkgdatadir@"
 libdir="@libdir@"
 libexecdir="@libexecdir@"
